# OwnAudioVST3

./: .gitignore  .gitmodules  ClearFolders.sh  OwnVST3Sharp.csproj  OwnVST3Sharp.sln  Program.cs  README.md
.github/workflows/: build.yml
OwnVST3Editor/: OwnVST3Editor.csproj  VstEditorApp.cs
OwnVST3Editor/Controls/: VstEditorHost.cs  VstEditorWindow.cs
OwnVST3Editor/Extensions/: OwnVst3WrapperExtensions.cs
OwnVST3Editor/Platform/: NativeWindowHandle.cs
OwnVST3Editor/Services/: VstEditorService.cs
OwnVST3EditorDemo/: OwnVST3EditorDemo.csproj  Program.cs  WhiteNoiseGenerator.cs  app.manifest
OwnVST3EtoDemo/: OwnVST3EtoDemo.csproj  Program.cs  VstEditorPanel.cs
OwnVST3Host/: LockFreeQueue.cs  OwnVST3.cs  OwnVST3Classes.cs  OwnVST3Delegates.cs  OwnVST3Host.csproj  OwnVST3Methods.cs  OwnVST3Struct.cs  README.md  ThreadedVst3Wrapper.cs  VstEditorApp.cs
OwnVST3Host/Controls/: VstEditorHost.cs  VstEditorWindow.cs
OwnVST3Host/Extensions/: OwnVst3WrapperExtensions.cs
OwnVST3Host/NativeWindow/: INativeWindow.cs  NativeWindowFactory.cs  NativeWindowLinux.cs  NativeWindowMac.cs  NativeWindowWindows.cs  README.md  VstEditorController.cs
OwnVST3Host/Platform/: NativeWindowHandle.cs  README.md  WindowsChildWindowHelper.cs
OwnVST3Host/Services/: VstEditorService.cs
OwnVST3Juce/: CMakeLists.txt  ownvst3.def
OwnVST3Juce/include/: ownvst3_exports.h
OwnVST3Juce/src/: EditorWindow.cpp  EditorWindow.h  Exports.cpp  JuceHeader.h  PluginInstance.cpp  PluginInstance.h  SpscQueue.h  StringCache.cpp  StringCache.h
runtimes/osx-arm64/native/: libownvst3.dylib
runtimes/osx-x64/native/: libownvst3.dylib
runtimes/osx/native/: libownvst3.dylib
